# Runner

./: .dockerignore  .env.example  .gitignore  .gitlab-ci.yml  .gitmodules  CHANGELOG.md  CITATION.cff  CMakeLists.txt  COPYING  Dockerfile  FILES.md  Kconfig  LICENSE  LICENSE.MIT  LICENSE.txt  Makefile  Makefile.in  NOTICEFORPROJT.md  PRIVACY.md  README.md  TRADEMARK  VERSION  bitstream.c  bitstream.h  build-config.h.in  composer.json  compress.c  configure  development.nix  flake.nix  infback.c  inftrees.c  manifest.toml  mask.c  mask.h  meson.build  mmask.c  mmask.h  mqrspec.c  mqrspec.h  (+28 more)
.github/: CODEOWNERS  CODE_OF_CONDUCT.md  CONTRIBUTING.md  PULL_REQUEST_TEMPLATE.md  SECURITY.md  config.yml
.github/ISSUE_TEMPLATE/: bug.yaml  config.yml
.github/policies/: labelAdded.lastVersionRemoval.yml  labelAdded.validationDefenderError.yml
.github/workflows/: c-std.yml  ci.yml  cmake.yml  comment_check_amalgamation.yml  configure.yml  contribs.yml  docker.yml  fuzz.yml  macos.yml  main.yml  msys-cygwin.yml  others.yml  patch-receiver.yml  stale.yml
.gitlab/: projecttick-portal-community.spec  projecttick-portal-enterprise.spec
.reuse/: dep5
.reuse/templates/: json.jinja2  json_support.jinja2
LICENSES/: LicenseRef-Qt-Commercial.txt
assets/: app.js  bootstrap.js
assets/controllers/: hello_controller.js
cmake/: FindSphinx.cmake  download_test_data.cmake
cogs/: modmail.py  plugins.py  utility.py
common/: common-cpu.c  common-cpu.h  common-external.c  common-external.h  common-governors.c  common-governors.h  common-gpu.c  common-gpu.h  common-helpers.c  common-helpers.h  common-logging.c  common-logging.h  common-pidfds.c  common-pidfds.h  common-power.c  common-power.h  common-profile.c  common-profile.h  common-splitlock.c  common-splitlock.h
conf/: nginx.conf
conf/nginx/: server.tpl.conf  yunohost_admin.conf  yunohost_api.conf.inc
config/: .gitignore  services.yaml
config/routes/: framework.yaml  security.yaml  web_profiler.yaml
contrib/ada/: CMakeLists.txt
contrib/blast/: Makefile
contrib/dotzlib/: DotZLib.build  DotZLib.sln  readme.txt
contrib/infback9/: inftree9.c
contrib/minizip/: CMakeLists.txt  Makefile  Makefile.am  minizip.pc.txt  minizipConfig.cmake.in
contrib/testptlibzippy/: testptlibzippy.txt
daemon/: gamemode-config.c  gamemode-config.h  gamemode-context.c  gamemode-cpu.c  gamemode-dbus.c  gamemode-gpu.c  gamemode-ioprio.c  gamemode-sched.c  gamemode-tests.c  gamemode-wine.c  gamemode.h  gamemoded.c
data/: gamemode-simulate-game.1.in  gamemoded.8.in  gamemodelist.1.in  gamemoderun.1.in  meson.build  org.projecttick.gamemode.metainfo.xml
data/dbus/: org.projecttick.GameMode.service.in
docs/: CMakeLists.txt  README.md
docs/docset/: docSet.sql  docset.json
docs/mkdocs/: mkdocs.yml  requirements.txt
docs/sphinx/: conf.py.in
example/: main.c
find-modules/: Find7Zip.cmake  Find7z.cmake  FindCanberra.cmake  FindEGL.cmake  FindFFmpeg.cmake  FindGLIB2.cmake  FindGperf.cmake  FindGradle.cmake  FindIcoTool.cmake  FindInotify.cmake  FindIsoCodes.cmake  FindKF5.cmake  FindKF6.cmake  FindLibExiv2.cmake  FindLibGit2.cmake  FindLibMount.cmake  FindLibcap.cmake  FindOpenEXR.cmake  FindPhoneNumber.cmake  FindPoppler.cmake  FindPulseAudio.cmake  FindQHelpGenerator.cmake  FindQtWaylandScanner.cmake  FindReuseTool.cmake  FindSasl2.cmake  FindSeccomp.cmake  FindSharedMimeInfo.cmake  FindTaglib.cmake  FindUDev.cmake  FindWayland.cmake  FindWaylandProtocols.cmake  FindWaylandScanner.cmake  FindX11_XCB.cmake  FindXCB.cmake  Findepoxy.cmake  Findgzip.cmake
hooks/conf_regen/: 15-nginx
include/nlohmann/: adl_serializer.hpp  byte_container_with_subtype.hpp  json.hpp  json_fwd.hpp  ordered_map.hpp
kde-modules/: KDECMakeSettings.cmake  KDEClangFormat.cmake  KDECompilerSettings.cmake  KDEFrameworkCompilerLegacySettings.cmake  KDEFrameworkCompilerSettings.cmake  KDEGitCommitHooks.cmake  KDEInstallDirs.cmake  KDEInstallDirs5.cmake  KDEInstallDirs6.cmake  KDEInstallDirsCommon.cmake  KDEMetaInfoPlatformCheck.cmake  KDEPackageAppTemplates.cmake  KDESetupPrefixScript.cmake  clang-format.cmake  prefix.sh.fish.cmake
kde-modules/kde-git-commit-hooks/: json-schema.py
lib/: client_impl.c  client_loader.c  gamemode_client.h
locales/: en.json  pl.json
modmail/: __init__.py  changelog.py  checks.py  clients.py  config.py  models.py  paginator.py  thread.py  time.py  utils.py
modules/: CheckAtomic.cmake  ECMAddAndroidApk.cmake  ECMAddAppIcon.cmake  ECMAddQch.cmake  ECMAddQtDesignerPlugin.cmake  ECMAddTests.cmake  ECMCheckOutboundLicense.cmake  ECMConfiguredInstall.cmake  ECMCoverageOption.cmake  ECMCreateQmFromPoFiles.cmake  ECMDeprecationSettings.cmake  ECMEnableSanitizers.cmake  ECMFeatureSummary.cmake  ECMFindModuleHelpers.cmake  ECMFindQmlModule.cmake  ECMFindQmlModule.cmake.in  ECMGenerateDBusServiceFile.cmake  ECMGenerateExportHeader.cmake  ECMGenerateHeaders.cmake  ECMGeneratePkgConfigFile.cmake  ECMGeneratePriFile.cmake  ECMGeneratePythonBindings.cmake  ECMGeneratePythonBindings.toml.in.license  ECMGenerateQDoc.cmake  ECMGenerateQmlTypes.cmake  ECMInstallIcons.cmake  ECMMarkAsTest.cmake  ECMMarkNonGuiExecutable.cmake  ECMOptionalAddSubdirectory.cmake  ECMPackageConfigHelpers.cmake  ECMPoQmTools.cmake  ECMQMLModules.cmake  ECMQmLoader.cpp.in  ECMQmlModule.cmake  ECMQmlModule.cpp.in.license  ECMQmlModule5.cmake  ECMQmlModule6.cmake  ECMQtDeclareLoggingCategory.cmake  ECMQueryQt.cmake  ECMSetupQtPluginMacroNames.cmake  (+7 more)
nixos/: checks.nix  default.nix  modmail-with-overlay.nix  modmail.nix
os400/: ptlibzippyfree.rpgle
pkgs/: default.nix  overlay.nix
scripts/: _common.sh  backup  change_url  config  install  remove  restore  upgrade
share/: config_global.toml
src/: Kernel.php  settings.py
templates/: base.html.twig  index.html.twig
test/: CMakeLists.txt
tests/: CMakeLists.txt  bootstrap.php  rscode.c  rscode.h
toolchain/: Android.cmake  deployment-file-qt6.json.in.license  ecm-version.gradle.in  generate-fastlane-metadata.py
util/: cpucorectl.c  cpugovctl.c  gpuclockctl.c  platprofctl.c  procsysctl.c  x3dmodectl.c
(+196742 files in other folders)
